# RoboVoyager

./: .gitignore  README.md  ROSCOMMANDS.md  ROS_COMMANDS.md  ros_commands.txt  start.sh  start_ros.sh
frontend/: backup.js  global.css  index.html  ros-mobile.html  ros.html  rosbridge.js
frontend/basic/: global.css  index.html  monitoring.html  navbar.js  rosNodeHandler.js
frontend/basic/css/: global.css  navbar.css
frontend/basic/js/: rosNodeHandler.js
frontend/mobile/: ros-mobile.html
frontend/sveltekit/: package-lock.json  package.json  svelte.config.js
frontend/sveltekit/src/components/: Navbar.svelte
frontend/sveltekit/src/lib/components/: MonitorWindow.svelte  Navbar.svelte
frontend/sveltekit/src/routes/: +layout.svelte  +page.svelte
frontend/sveltekit/src/routes/controls/: +page.svelte
frontend/sveltekit/src/routes/monitoring/: +page.svelte
frontend/sveltekit/src/routes/robot/: +page.svelte
frontend/sveltekit/src/routes/specifications/: +page.svelte
frontend/vue/: index.html
frontend/vue/assets/: AboutView-945c0733.js  index-347319b4.css  index-55648e21.js
src/battery/: CMakeLists.txt  package.xml
src/controls/: CMakeLists.txt  package.xml
src/controls/launch/: controls.launch
src/controls/src/: controls.py
src/data_saver/: CMakeLists.txt  package.xml
src/data_saver/src/: data_SAVER.py
src/first_node/: CMakeLists.txt  first_node.py  package.xml
src/first_node/config/: log.conf
src/gps/: CMakeLists.txt  gps_data.txt  package.xml
src/gps/src/: gps.py
src/hello_world/: package.xml
src/hello_world/launch/: hello_world.launch
src/hello_world/src/: hello_world.py
src/multimedia/: CMakeLists.txt  package.xml
src/multimedia/launch/: multimedia_script.launch
src/multimedia/scripts/: multimedia_script.py
src/multimedia_capture/: CMakeLists.txt  package.xml
src/multimedia_capture/src/: multimedia_capture.py
src/robot_model/: package.xml
src/robot_model/launch/: gazebo.launch
src/robot_model/urdf/: differential_drive.urdf
src/segmentation/: CMakeLists.txt  package.xml
src/segmentation/src/: segmentation_script.py
src/segmentation/src/comparison_test/: segmentation_deeplab.ipynb  segmentation_fcn.ipynb
src/sensors/: CMakeLists.txt  package.xml
src/sensors/src/: sensors.py
src/video_streaming/: CMakeLists.txt  package.xml
src/video_streaming/launch/: video_streaming.launch
src/video_streaming/msg/: VideoStreamInfo.msg
src/video_streaming/src/: video_streaming.py  video_streaming_image_message.py  video_streaming_script.py
src/video_streaming/srv/: SetVideoStreamSettings.srv
src/yolo/: CMakeLists.txt  package.xml  requirements.txt  segmentation.py
src/yolo/src/: yolo_script.py
src/zed_streaming/: CMakeLists.txt  package.xml
src/zed_streaming/src/: zed_streaming_script.py
yolo/: yolov8.ipynb  yolov8.py
