<?xml version="1.0"?>
<package format="2">
  <name>first_node</name>
  <version>0.0.0</version>
  <description>The first_node package</description>
  <maintainer email="emir@todo.todo">emir</maintainer>
  <license>TODO</license>

  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
